[Wiki Home](Home)

### libmp4tag Change Log

<!--

**1.2.3 beta 2023-9---**

-->

**1.2.2 beta 2023-8-31**

* Bug Fixes:
    * Prevent possible crashes.
    * Fix various internal bugs.
    * Fix windows build.
    * Fix windows file handling on re-write.

**1.2.1 beta 2023-8-29**

* Bug Fixes:
    * Fix disc/track output when total is zero.
    * Fix disc/track parsing issues.
    * Fix memory leak.
    * Fix bug setting new disk/track tag.
    * Fix mp4tag_clean_tags.
* Changes:
    * Create and install pkgconfig file.

**1.2.0 beta 2023-8-28**

* Bug Fixes:
    * Fix crash when taglist is present but empty.
    * Recognize more files as mp4.
* New Features:
    * New mp4tag_set_binary_tag() routine.
    * Added wiki documentation.

**1.1.1 beta 2023-8-27**

* Bug Fixes:
    * Build now works on FreeBSD.
* New Features:
    * mp4tag_preserve_tags, mp4tag_restore_tags are now implemented.
    * mp4tagcli: Added --copyfrom/--copyto to test preserve/restore.

**1.1.0 beta 2023-8-24**

* Notes:
    * Initial Release