@@ -1,4 +1,4 @@
-prefix=@CMAKE_INSTALL_PREFIX@
+prefix=@LIBMP4TAG_INST_PREFIX@
 includedir=${prefix}/include
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 
